--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Cheng TANG"
   avatar           : "picCT.jpg"
-  bio              : "Yes, the smiling person above is me."
+  bio              : "The above smiling person is me."
   location         : "Nagoya, Aichi, Japan"
   employer         : "https://cem.web.nitech.ac.jp/hilab/"
   pubmed           : 
