--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Cheng TANG"
   avatar           : "picCT.jpg"
   bio              : "The above smiling person is me."
-  location         : "Nagoya, Aichi, Japan"
+  location         : # "Nagoya, Aichi, Japan"
   employer         : "https://cem.web.nitech.ac.jp/hilab/"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=GvXOVv0AAAAJ"
