--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
 
-  - title: "Journal Publications"
+  - title: "Publications"
     url: /JournalPublications/
     
 #   - title: "Guide"
