--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
 
   - title: "Publications"
     url: /JournalPublications/
+
+  - title: "Updates"
+    url: /updates/
     
 #   - title: "Guide"
 #     url: /markdown/
