--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Personal Website"
+title                    : "AI | Personal Website"
 title_separator          : "-"
 name                     : &name "Cheng TANG"
 description              : &description "personal description"
