--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Cheng TANG"
   avatar           : "picCT.jpg"
-  bio              : "The smiling person above is me."
+  bio              : "Yes, the smiling person above is me."
   googlescholar    : "https://scholar.google.com/citations?user=GvXOVv0AAAAJ"
   researchgate     : "https://www.researchgate.net/profile/Cheng-Tang-11"
   orcid            : "https://orcid.org/0000-0002-8148-1509"
