--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   researchgate     : "https://www.researchgate.net/profile/Cheng-Tang-11"
   orcid            : "https://orcid.org/0000-0002-8148-1509"
   github           : "ChengTANG-AI"
-  location         : "Nagoya, Aichi, Japan"
+  location         : "Fukuoka, Japan"
   employer         : # "https://cem.web.nitech.ac.jp/hilab/"
   pubmed           : 
   email            : "tangcheng.ac@outlook.com"
