--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "AI | Cheng TANG"
 title_separator          : "-"
 name                     : &name "Cheng TANG"
 description              : &description "personal description"
-url                      : https://chengtang-ai.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://chengtang-ai.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ChengTANG-AI/ChengTANG-AI.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
