--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Cheng TANG"
-  avatar           : "picCT.jpg"
-  bio              : "Yes, the smiling person above is me."
+  avatar           : "ZP43.jpg"
+  bio              : "Welcome to my homepage."
   googlescholar    : "https://scholar.google.com/citations?user=GvXOVv0AAAAJ"
   researchgate     : "https://www.researchgate.net/profile/Cheng-Tang-11"
   orcid            : "https://orcid.org/0000-0002-8148-1509"
