--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+
 # Site Settings
 locale                   : "en-US"
 title                    : "AI | Cheng TANG"
