--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,11 @@
 # main links links
 main:
 
-  - title: "Publications"
+  - title: "Journal Publications"
     url: /JournalPublications/
+
+  - title: "Conference Publications"
+    url: /ConferencePublications/
 
   - title: "Updates"
     url: /updates/
