--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Cheng TANG"
   avatar           : "ZP43.jpg"
-  bio              : "Assistant Professor, Kyushu University."
+  bio              : "Assistant Professor at Kyushu University."
   googlescholar    : "https://scholar.google.com/citations?user=GvXOVv0AAAAJ"
   researchgate     : "https://www.researchgate.net/profile/Cheng-Tang-11"
   orcid            : "https://orcid.org/0000-0002-8148-1509"
