--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
   - title: "Updates"
     url: /updates/
     
+  - title: "Hobbies"
+    url: /Hobbies/
+    
 #   - title: "Guide"
 #     url: /markdown/
 
